--- a/samples/dotnet/Ahead.PeopleProfileImportSample/ImportViaUpload/appsettings.Development.json
+++ b/samples/dotnet/Ahead.PeopleProfileImportSample/ImportViaUpload/appsettings.Development.json
@@ -3,6 +3,12 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    },
+    "Console": {
+      "IncludeScopes": false,
+      "FormatterOptions": {
+        "SingleLine": true
+      }
     }
   }
 }
