--- a/documentation/package.json
+++ b/documentation/package.json
@@ -10,10 +10,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "^0.4.1",
-    "@astrojs/starlight": "^0.15.3",
-    "astro": "^4.1.2",
-    "sharp": "^0.33.2",
-    "typescript": "^5.3.3"
+    "@astrojs/check": "0.7.0",
+    "@astrojs/starlight": "0.23.2",
+    "astro": "4.9.2",
+    "sharp": "0.33.4",
+    "typescript": "5.4.5"
   }
 }
